--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Yogesh Naik - Profile</h1>
+<p>13.5+ years of professional software experience as Java/J2EE application designer/developer with hands on programming.</p>
+  
+<p>Expertise includes Object Oriented Analysis and Design, Database Design, Graphical User Interface Design</p>
+<p>Technical Skills: Java, Crunch, Hadoop, Akka, CouchDB, MongoDB, Struts, JavaScript, Oracle DB, Comptel InstantLink, Web Services, Hibernate, Spring
+  Design skills: SOLID, DRY, YAGNI, TDD, Design patterns</p>
+<p>Has worked as an Associate to Technical Architects during proposal writing phase, POC</p>
+<p>Experienced in working in different countries/cultures including Belgium, France, Netherlands and USA.</p>
+<p>Quick learner - Quickly and independently able to learn about any new technology and functional domain.</p>
+<p>Leadership - Experience in leading teams, have contributed to project planning and estimation, conducting reviews and mentoring.</p>
+<p>Communication Skills - Technical abilities are well complemented by sound communication and customer interaction abilities.</p>
+ 
 </body>
 </html>
