added Google Custom Search

--- a/index.html
+++ b/index.html
@@ -1603,6 +1603,19 @@ table.MsoTableGrid
 
 <body lang=EN-US link=blue vlink=purple style='tab-interval:.5in'>
 
+<script>
+  (function() {
+    var cx = '007555896010058376731:no_lapewh80';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
+
 <div class=WordSection1>
 
 <div align=right>
