--- a/index_files/header.html
+++ b/index_files/header.html
@@ -9,13 +9,10 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 15">
 <meta name=Originator content="Microsoft Word 15">
-<link id=Main-File rel=Main-File href="../Yogesh%20Naik-CV.html">
-<!--[if gte mso 9]><xml>
- <o:shapedefaults v:ext="edit" spidmax="2049"/>
-</xml><![endif]-->
+<link id=Main-File rel=Main-File href="../index.html">
 </head>
 
-<body lang=EN-US link=blue vlink=purple>
+<body lang=EN-US link=blue vlink="#954F72">
 
 <div style='mso-element:footnote-separator' id=fs>
 
@@ -66,12 +63,9 @@ mso-border-bottom-alt:solid windowtext .75pt;padding:0in 0in 1.0pt 0in'>
 solid windowtext .75pt;padding:0in;mso-padding-alt:0in 0in 1.0pt 0in'><span
 lang=NL style='font-size:18.0pt;mso-bidi-font-size:22.0pt;font-family:"Arial",sans-serif;
 mso-ansi-language:NL'>Yogesh Naik<span
-style='mso-spacerun:yes'>                  </span><span
-style='mso-spacerun:yes'>    </span><span
+style='mso-spacerun:yes'>                      </span><span
 style='mso-spacerun:yes'>            </span></span><span lang=NL
-style='font-family:"Arial",sans-serif;mso-ansi-language:NL'><a
-href="https://in.linkedin.com/in/yogeshrnaik">https://in.linkedin.com/in/yogeshrnaik</a>
-<o:p></o:p></span></p>
+style='font-family:"Arial",sans-serif;mso-ansi-language:NL'><o:p></o:p></span></p>
 
 </div>
 
