--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
-<header>Hello!</header>
+<head>
+    <title>Hello!</title>
+</head>
+
 <body>
-Hello world!
+<h1>
+    Hello world!
+</h1>
 </body>
+
 </html>
